# sniff-bytes

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
lib/: index.cjs  index.mjs  load.cjs
npm/android-arm-eabi/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
types/: index.d.cts  index.d.mts
