[package]
name = "sniff-bytes"
version = "0.1.0"
description = "A Neon library to sniff the file format of a binary buffer"
authors = ["David Herman <david.herman@gmail.com>"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-format = "0.18.0"

[dependencies.neon]
version = "1.0.0-alpha.4"
default-features = false
features = ["napi-6"]
